--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "body-parser": "^1.17.2",
     "express": "^4.18.2",
     "mongoose": "^6.7.2",
+    "multer": "^1.4.4",
+    "multer-gridfs-storage": "^5.0.2",
     "nodemon": "^1.11.0"
   }
 }
